# Tsukihime-Translation

./: .gitattributes  .gitignore  00_00.txt  01_01_CIEL01_1_1.txt  03_01_CIEL03_1.txt  05_00_ARC05_10B.txt  05_00_ARC05_3_1.txt  05_00_ARC05_6_1.txt  05_00_ARC05_7_2.txt  05_00_ARC05_8.txt  05_00_ARC05_9.txt  05_00_ARC05_9_1.txt  05_00_ARC05_9_2B.txt  05_01_CIEL05_1C.txt  13_01_01_CIEL13_3_1.txt  13_01_01_CIEL13_3_2.txt  Editing_Guidelines.md  README.md
.github/workflows/: script_lint.yml
Ryujinx_mods/100% Save File/: savedata000
Ryujinx_mods/EnableScreenshots/: README.md
Ryujinx_mods/beatrice/: README.md  beatrice.hku  beatrice.s
allscr/: .gitignore  README.md  audio_stream.txt  extract_allscr.sh  generate_allscr.sh  retime_msad_audio.py
allscr/decompressed/: allscr.mrg_0003.txt  allscr.mrg_0004.txt  allscr.mrg_0005.txt  allscr.mrg_0006.txt  allscr.mrg_0007.txt  allscr.mrg_0008.txt  allscr.mrg_0009.txt  allscr.mrg_0010.txt  allscr.mrg_0011.txt  allscr.mrg_0012.txt  allscr.mrg_0013.txt  allscr.mrg_0014.txt  allscr.mrg_0015.txt  allscr.mrg_0016.txt  allscr.mrg_0017.txt  allscr.mrg_0018.txt  allscr.mrg_0019.txt  allscr.mrg_0020.txt  allscr.mrg_0021.txt  allscr.mrg_0022.txt  allscr.mrg_0023.txt  allscr.mrg_0024.txt  allscr.mrg_0025.txt  (+526 more)
script/: mergeENJPToExcel.py
system_strings/: generate_readable.py  sysmes_text.en  sysmes_text.ja
tools/: add_font_effects.py  linebreak_summaries.py
tools/assembler/: Cargo.toml  README.md
tools/assembler/src/: ips.rs  main.rs  parser.rs
web/: .eleventy.js  README.md  package-lock.json  package.json  webpack.config.js
(+3533 files in other folders)
