[package]
name = "assembler"
version = "0.1.0"
authors = ["Avuxo"]
edition = "2018"

[dependencies.keystone]
# the kind folks at keystone have yet to actually publish the
# version from their github that works.
# https://github.com/keystone-engine/keystone/issues/418
git = "https://github.com/keystone-engine/keystone"
rev = "c4de98f71f05f356817f5e91fee0d509c7b0b440"